--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MH SIFAT</title> 
+    <title>Boss Baby</title> 
     <!--bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" 
     crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
+
+    <link rel="stylesheet" href="images/CSS/style.css">
+
 </head>
 <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg fixed-top" style="background-color: white;">
+    <img src="images/il_570xN.4192587054_4s9s.webp" width="50px" height="40px" alt="">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">MH SIFAT</a>
+          <a class="navbar-brand" href="#" style="font-weight: 800;">Boss Baby</a>          
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -44,6 +50,11 @@
           </div>
         </div>
       </nav>
+      <div class="container-fluid">
+        <div class="row">
+            
+        </div>
+      </div>
 
 <!--Carousel-->
 
@@ -78,6 +89,33 @@
     </button>
   </div>
 
+  <div class="container-fluid">
+<div class="row">
+  <div class="col-12">
+    <h3 class="display-4 mt-5 mb-5 text-center">Welcome Everyone Boss Baby<br> Is Here For You</h3>
+  </div>
+</div>
+
+<div class="row justify-content-evenly">
+  <div class="col-md-3 text-center">
+    <h1><i class="bi bi-filetype-html text-danger"></i></h1>
+    <h5>Html Qalification</h5>
+    <p>I have Experince of 6 years.I have done more then 100 projects by using html.</p>
+  </div>
+  <div class="col-md-3 text-center">
+   <h1> <i class="bi bi-filetype-css  text-info"></i></h1>
+   <h5>CSS Qalification</h5>
+    <p>I have Experince of 4 years.I have done more then 80 projects by using CSS. </p>
+  </div>
+  <div class="col-md-3 text-center">
+   <h1> <i class="bi bi-filetype-js text-success"></i></h1>
+    <h5>JS Qalification</h5>
+    <p>I have Experince of 3 years.I have done more then 60 projects by using JS.</p>
+  </div>
+
+</div>
+
+  </div>
 
 
 <!--js-->
