--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" 
     crossorigin="anonymous">
-
+<!--Bootstap icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
 
-    <link rel="stylesheet" href="images/CSS/style.css">
 
 </head>
 <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg fixed-top" style="background-color: white;">
-    <img src="images/il_570xN.4192587054_4s9s.webp" width="50px" height="40px" alt="">
+    
+    <nav class="navbar navbar-expand-lg sticky-top" style="background-color: white; font-weight: 600;">
+    
         <div class="container-fluid">
-          <a class="navbar-brand" href="#" style="font-weight: 800;">Boss Baby</a>          
+          <a class="navbar-brand" href="#" style="font-weight: 800;">
+            <img src="images/il_570xN.4192587054_4s9s.webp" width="50px" height="40px" alt="">Boss Baby</a>          
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -96,26 +97,156 @@
   </div>
 </div>
 
-<div class="row justify-content-evenly">
-  <div class="col-md-3 text-center">
+<div class="row justify-content-evenly pb-3 pt-3">
+  <div class="col-md-3 text-center mt-5">
     <h1><i class="bi bi-filetype-html text-danger"></i></h1>
     <h5>Html Qalification</h5>
     <p>I have Experince of 6 years.I have done more then 100 projects by using html.</p>
   </div>
-  <div class="col-md-3 text-center">
+  <div class="col-md-3 text-center mt-5">
    <h1> <i class="bi bi-filetype-css  text-info"></i></h1>
    <h5>CSS Qalification</h5>
     <p>I have Experince of 4 years.I have done more then 80 projects by using CSS. </p>
   </div>
-  <div class="col-md-3 text-center">
+  <div class="col-md-3 text-center mt-5">
    <h1> <i class="bi bi-filetype-js text-success"></i></h1>
     <h5>JS Qalification</h5>
     <p>I have Experince of 3 years.I have done more then 60 projects by using JS.</p>
   </div>
 
 </div>
-
+<!--line-->
+<hr>
+<!--growth-->
+<div class="row justify-content-evenly pt-4 pb-5">  
+<div class="col-md-5 mt-5 pt-3">
+  <h5 class="mt-4">Work exprince with JS</h5>
+  <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+    <div class="progress-bar bg-success" style="width: 60%">60%</div>
   </div>
+  <h5 class="mt-4">Work exprince with CSS</h5>
+  <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+    <div class="progress-bar bg-info text-dark" style="width: 80%">80%</div>
+  </div>
+  <h5 class="mt-4">Work exprince with Html</h5>
+  <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+    <div class="progress-bar bg-danger" style="width: 100%">100%</div>
+  </div>
+</div>
+<div class="col-md-5 pt-3">
+  <img src="images/B5.png" class="img-fluid" alt="">
+</div>
+
+</div>
+<!--contact-->
+<div class="row justify-content-evenly pt-5 pb-4" style="background-color: rgba(226, 234, 240, 0.505);">
+  <div class="col-md-5 mt-5">
+    <form>
+      <h3 class="mb-4">Contact Form</h3>
+      <div class="mb-3">
+        <label for="name" class="form-label">Full Name</label>
+        <input type="text" class="form-control" id="name">
+      </div>
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Message for Me</label>
+  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
+      <div class="mb-3 form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+      </div>
+      <button type="submit" class="btn btn-dark">Submit</button>
+    </form>
+  </div>
+
+  <div class="col-md-5 mt-5">
+    <h3 class="mb-4">Address</h3>
+    <p>20/1 road, Bangshal,<br>
+      Dhaka-1000,Bangladesh <br>
+      <i class="bi bi-telephone-fill"></i> :+0880000004</p>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d2409.2817991042557!2d90.39726989776247!3d23.72489590309816!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1680972655487!5m2!1sen!2sbd"
+      style="width: 100%;" height="300" style="border:0;" allowfullscreen=""
+       loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
+</div>
+<!--FAQ-->
+<div class="row justify-content-evenly pt-5 pb-5">
+<div class="col-10">
+  <h3 class="text-center pb-4">FAQ</h3>
+  <div class="accordion accordion-flush border" id="accordionFlushExample">
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+          Question #1
+        </button>
+      </h2>
+      <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">What is my charges?</div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+          Question #2
+        </button>
+      </h2>
+      <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+          Question #3
+        </button>
+      </h2>
+      <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+<!--footer-->
+
+<div class="row justify-content-evenly bg-dark text-white pt-4 pb-5">
+<div class="col-md-3 pt-4">
+<h5 pb-2>Boss Baby</h5>
+<p>I can do code for you to look your webstise Awesome.
+  contact me if you need a creative website for your business.</p>
+</div>
+<div class="col-md-3 pt-4"> 
+  <h5 class="pb-2">Links You Need</h5>
+  <p>
+    <a href="#" class="link-light text-decoration-none">Home</a><br>
+    <a href="#" class="link-light text-decoration-none">mail</a><br>
+    <a href="#" class="link-light text-decoration-none">Services</a><br>
+    <a href="#" class="link-light text-decoration-none">Projects</a><br>
+    </p>
+</div>
+<div class="col-md-3 pt-4">
+  <h5>Contact Us</h5>
+  <p><i class="bi bi-envelope"></i> bossbaby@mail.com<br>
+      Dhaka,Bangladesh<br>
+    <i class="bi bi-telephone"></i> +880000004<br>
+  </p>
+</div>
+</div>
+<!--copyright-->
+<div class="row bg-secondary text-white text-center p-2">
+  <div class="col-12 pt-3">
+    <p>Copyright 0000-0000 by Boss Baby. all rights Reseverd. </p>
+  </div>
+</div>
+
+
+<!--end-->
+</div>
 
 
 <!--js-->
